--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </p>
             </div>
             <div class="col-12 col-md-6 text-center">
-                <img class="img-profile" src="Assets/Img/200kb.jpg" alt="Profile">
+                <img class="img-profile" src="assets/Img/200kb.jpg" alt="Profile">
             </div>
           </div>
         </div>
