--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </li>
               </ul>
       
-              <a class="btn btn-outline-light ms-md-3" href="#">Hire Me</a>
+              <a class="btn btn-outline-light ms-md-3" href="https://wa.me/62895417094343?text= ">Hire Me</a>
             </div>
           </nav>
         </div>
