--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/vendor/riki-builder/css/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/vendor/riki-builder/css/riki_block.css">
   
-    <title>Document</title>
+    <title>Portofolio Website Yudi Heryanto</title>
 </head>
 <body style="background-color: #212529;">
 
