--- a/index.html
+++ b/index.html
@@ -96,24 +96,24 @@
               <table>
                 <tr>
                     <td class="td1">Nama</td>
-                    <td>:Yudi Heryanto</td>
+                    <td class="td2">:Yudi Heryanto</td>
                 </tr>
                 <tr>
                     <td class="td1">Alamat</td>
-                    <td>: Pemalang City, Central Java, 52363</td>
+                    <td class="td2">: Pemalang City, Central Java, 52363</td>
                 </tr>
                 <tr>
                   <td class="td1">Education</td>
-                  <td>: Universitas Kristen Satya Wacana Salatiga (8 Agustus 2018 – 15 Oktober 2022)</td>
-              </tr>
+                  <td class="td2">: Universitas Kristen Satya Wacana Salatiga (8 Agustus 2018 – 15 Oktober 2022)</td>
+                </tr>
                 <tr>
                   <td class="td1">Email</td>
-                  <td>: yudiheryanto65@gmail.com</td>
-              </tr>
-              <tr>
+                  <td class="td2">: yudiheryanto65@gmail.com</td>
+                </tr>
+                <tr>
                 <td class="td1">Phone</td>
-                <td>: 0895417094343</td>
-            </tr>
+                <td class="td2">: 0895417094343</td>
+                </tr>
             </table>
               <center><p><a class="btn " id="btn-aboutme" href="https://docs.google.com/uc?export=download&id=1AvqGq_3PKIRViMP5G7K5SbKhdF70OQJB" download>Download CV</a></p></center>
             </div>
